# bitcoin-node-census

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  update-toolchains.yml
docs/: census.schema.json
examples/: generate-schema.rs
site/: census.js  census.jsonl.backup  index.html
src/: lib.rs  main.rs  report.rs  stats.rs
