[package]
name = "bitcoin-node-census"
version = "0.1.1"
edition = "2021"
authors = ["Nick Johnson <nick@yonson.dev>"]
description = "Track bitcoin node feature adoption"
license = "CC0-1.0"
repository = "https://github.com/nyonson/bitcoin-node-census"
keywords = ["bitcoin", "p2p", "network", "monitoring", "census"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
bitcoin-peers-crawler = "0.1.3"
bitcoin = "0.32"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
clap = { version = "4.5", features = ["derive", "env"] }
# Logging
log = "0.4"
fern = "0.6"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
